<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/meld_logo_splash" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Welcome to Meld"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvExternalCustomerId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableRight="@drawable/ic_action_edit"
                android:drawablePadding="16dp"
                android:gravity="center"
                android:padding="4dp"
                android:textColor="@color/white"
                android:visibility="gone"
                tools:text="Test" />


            <LinearLayout
                android:id="@+id/viewProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textProducts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:gravity="center"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:text="Select Products :"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textSelectedProducts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="6dp"
                    android:gravity="center"
                    android:paddingHorizontal="16dp"
                    android:singleLine="false"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </LinearLayout>

            <TextView
                android:id="@+id/btnConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foreground="?selectableItemBackground"
                android:padding="8dp"
                android:text="@string/btn_label_connect"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="16sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp">

                <TextView
                    android:id="@+id/btnConnectionDemo"
                    style="?buttonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/connection_demo"
                    android:textColor="@android:color/holo_blue_light" />

                <View
                    android:layout_width="16dp"
                    android:layout_height="1dp" />

                <TextView
                    android:id="@+id/btnInstitutionsDemo"
                    style="?buttonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/institutions_demo"
                    android:textColor="@android:color/holo_blue_light" />
            </LinearLayout>


            <TextView
                android:id="@+id/btnAccountsDemo"
                style="?buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:background="@color/white"
                android:text="@string/accounts_demo"
                android:textColor="@android:color/holo_blue_light" />

            <TextView
                android:id="@+id/btnUpdateConfig"
                style="?buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:background="@color/white"
                android:visibility="gone"
                android:text="@string/update_meld_configuration"
                android:textColor="@android:color/holo_blue_light" />

            <Button
                android:id="@+id/btnTransactionsDemo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:text="@string/transactions_demo"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvInstitutionData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    tools:text="Test" />

                <TextView
                    android:id="@+id/tvConnection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    tools:text="Test" />


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


    <FrameLayout
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:progressTint="@android:color/holo_blue_light" />

    </FrameLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>